--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.GH_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GIT_TOKEN }}
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
